syntax = "proto3";

package stccommunity.iotdepinprotocol.iotdepinprotocol;

import "iotdepinprotocol/iotdepinprotocol/device.proto";
import "iotdepinprotocol/iotdepinprotocol/kv.proto";
import "iotdepinprotocol/iotdepinprotocol/event_pb.proto";
import "iotdepinprotocol/iotdepinprotocol/device_registry.proto";

option go_package = "github.com/stc-community/iot-depin-protocol/x/iotdepinprotocol/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateDevice         (MsgCreateDevice        ) returns (MsgCreateDeviceResponse        );
  rpc UpdateDevice         (MsgUpdateDevice        ) returns (MsgUpdateDeviceResponse        );
  rpc DeleteDevice         (MsgDeleteDevice        ) returns (MsgDeleteDeviceResponse        );
  rpc CreateKv             (MsgCreateKv            ) returns (MsgCreateKvResponse            );
  rpc UpdateKv             (MsgUpdateKv            ) returns (MsgUpdateKvResponse            );
  rpc DeleteKv             (MsgDeleteKv            ) returns (MsgDeleteKvResponse            );
  rpc CreateEventPb        (MsgCreateEventPb       ) returns (MsgCreateEventPbResponse       );
  rpc UpdateEventPb        (MsgUpdateEventPb       ) returns (MsgUpdateEventPbResponse       );
  rpc DeleteEventPb        (MsgDeleteEventPb       ) returns (MsgDeleteEventPbResponse       );
  rpc CreateDeviceRegistry (MsgCreateDeviceRegistry) returns (MsgCreateDeviceRegistryResponse);
  rpc UpdateDeviceRegistry (MsgUpdateDeviceRegistry) returns (MsgUpdateDeviceRegistryResponse);
  rpc DeleteDeviceRegistry (MsgDeleteDeviceRegistry) returns (MsgDeleteDeviceRegistryResponse);
}
message MsgCreateDevice {
  string creator    = 1;
  string deviceName = 2;
  string address    = 3;
  string value      = 4;
}

message MsgCreateDeviceResponse {}

message MsgUpdateDevice {
  string creator    = 1;
  string deviceName = 2;
  string address    = 3;
  string value      = 4;
}

message MsgUpdateDeviceResponse {}

message MsgDeleteDevice {
  string creator    = 1;
  string deviceName = 2;
}

message MsgDeleteDeviceResponse {}

message MsgCreateKv {
  string creator    = 1;
  string index      = 2;
  string value      = 3;
  string deviceName = 4;
}

message MsgCreateKvResponse {}

message MsgUpdateKv {
  string creator    = 1;
  string index      = 2;
  string value      = 3;
  string deviceName = 4;
}

message MsgUpdateKvResponse {}

message MsgDeleteKv {
  string creator    = 1;
  string index      = 2;
  string deviceName = 3;
}

message MsgDeleteKvResponse {}

message MsgCreateEventPb {
  string creator    = 1;
  string index      = 2;
  string deviceName = 3;
  string payload    = 4;
}

message MsgCreateEventPbResponse {}

message MsgUpdateEventPb {
  string creator    = 1;
  string index      = 2;
  string deviceName = 3;
  string payload    = 4;
}

message MsgUpdateEventPbResponse {}

message MsgDeleteEventPb {
  string creator    = 1;
  string index      = 2;
  string deviceName = 3;
}

message MsgDeleteEventPbResponse {}

message MsgCreateDeviceRegistry {
  string creator  = 1;
  string mid      = 2;
  string metaData = 3;
}

message MsgCreateDeviceRegistryResponse {}

message MsgUpdateDeviceRegistry {
  string creator  = 1;
  string mid      = 2;
  string metaData = 3;
}

message MsgUpdateDeviceRegistryResponse {}

message MsgDeleteDeviceRegistry {
  string creator = 1;
  string mid     = 2;
}

message MsgDeleteDeviceRegistryResponse {}

